# ytmpcli

./: .gitignore  README.md  links.txt  pyproject.toml  setup.py  ytmpcli.spec
.github/workflows/: release.yml
ytmpcli/: __init__.py  __main__.py  cli.py  downloader.py  gui.py
