[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ytmpcli"
version = "0.2.0"
description = "Minimalist YouTube downloader CLI"
readme = "README.md"
license = "MIT"
authors = [{ name = "NamikazeAsh", email = "satish.ash@northeastern.edu" }]
requires-python = ">=3.9"
dependencies = ["yt-dlp>=2023.1.1"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Topic :: Multimedia :: Sound/Audio",
]

[project.urls]
Homepage = "https://github.com/NamikazeAsh/ytmpcli"
Issues = "https://github.com/NamikazeAsh/ytmpcli/issues"

[tool.setuptools.packages.find]
include = ["ytmpcli*"]

[project.scripts]
ytmpcli = "ytmpcli.cli:main"
ytmpcli-gui = "ytmpcli.gui:main"
